thêm qrcode, tối ưu tostring, thêm swagger